# AI-Native-Linux

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MILESTONES.md  OPENAI_CODEX_OSS_APPLICATION.md  README.md  SECURITY.md  SPECIFICATION.md  SUPPORT.md
crates/aios-action/: Cargo.toml
crates/aios-action/src/: canonical.rs  envelope.rs  error.rs  execution.rs  id.rs  identity.rs  lib.rs  phase.rs  request.rs  trace.rs
crates/aios-action/tests/: error_paths.rs  golden_envelope.rs  lifecycle_replay.rs
crates/aios-apps/: Cargo.toml  build.rs
crates/aios-apps/proto/: aios_apps.proto
crates/aios-apps/src/: app_profile.rs  compatibility_orchestrator.rs  compatibility_runtime.rs  ecosystem.rs  error.rs  evidence.rs  knowledge_db.rs  lib.rs  orchestration.rs  package.rs  package_store.rs  runtime.rs  session.rs  session_driver.rs  update_driver.rs  version_chain.rs
crates/aios-apps/tests/: app_runtime.rs  evidence.rs  integration_cross_crate.rs  knowledge_db.rs  m13_acceptance.rs  m13_closure.rs  package_store.rs  service.rs  session_driver.rs  types_roundtrip.rs  update_driver.rs
crates/aios-backup/: Cargo.toml  build.rs
crates/aios-backup/proto/: aios.backup.v1alpha1.proto
crates/aios-backup/src/: backup_set.rs  capsule_mobility.rs  contract.rs  crypto_shred.rs  dr_runbook.rs  enums.rs  lib.rs  restore_plan.rs
crates/aios-capability-runtime/: Cargo.toml  build.rs
crates/aios-capability-runtime/proto/: aios.runtime.v1alpha1.proto
crates/aios-capability-runtime/src/: action_fabric.rs  adapter_handle.rs  adapter_manifest.rs  adapter_registry.rs  approval.rs  approval_gate.rs  approval_sink.rs  capsule_evidence.rs  capsule_lifecycle.rs  capsule_namespace.rs  cgroups.rs  context.rs  dispatch.rs  dispatch_queue.rs  dispatcher.rs  driver_capsule.rs  error.rs  evidence_emit.rs  evidence_payloads.rs  failure.rs  fips.rs  gdpr.rs  ima.rs  kernel_personality.rs  lib.rs  managed_isolate.rs  package_rosetta.rs  pipeline.rs  recursive_sandbox.rs  rollback.rs  rollback_engine.rs  rollback_strategy.rs  runtime.rs  sbom.rs  scheduler.rs  security_profile.rs  sel4_cap_model.rs  selinux.rs  snapshot.rs  state_sandbox.rs  (+5 more)
crates/aios-capability-runtime/tests/: acceptance_fixtures.rs  adapter_registry.rs  approval_orchestration.rs  dispatch_queue.rs  dispatcher.rs  evidence_emission.rs  grpc_roundtrip.rs  m4_closure.rs  mvp_golden_path.rs  pipeline.rs  policy_integration.rs  rollback_fsm.rs  types_roundtrip.rs
crates/aios-cognitive/: Cargo.toml  build.rs
crates/aios-cognitive/assets/: translator_system_prompt.txt
crates/aios-cognitive/proto/: aios.cognitive.v1alpha1.proto
crates/aios-cognitive/src/: breaker.rs  breaker_registry.rs  circuit.rs  core.rs  error.rs  evidence_emit.rs  evidence_payloads.rs  health_monitor.rs  in_memory_core.rs  intent.rs  latency.rs  latency_classifier.rs  lib.rs  model.rs  model_binding.rs  model_catalog.rs  production_core.rs  provenance_adapter.rs  provider_dispatch.rs  router.rs  router_state.rs  routing.rs  translator.rs  translator_engine.rs
crates/aios-cognitive/tests/: acceptance_fixtures.rs  breaker.rs  cognitive_core.rs  cross_crate_inv002.rs  evidence_emission.rs  grpc_roundtrip.rs  latency_classifier.rs  m11_closure.rs  model_binding.rs  model_catalog.rs  mvp_cognitive_walk.rs  provider_dispatch.rs  router.rs  types_roundtrip.rs
crates/aios-container/: Cargo.toml  build.rs
crates/aios-container/proto/: aios.container.v1alpha1.proto
crates/aios-container/src/: ecosystem_adapters.rs  engine_policy.rs  enums.rs  evidence.rs  importer.rs  isolation.rs  lib.rs  passport.rs  profile_gates.rs
crates/aios-distribution/: Cargo.toml  build.rs
crates/aios-distribution/proto/: aios_distribution.proto
crates/aios-distribution/src/: canonical.rs  catalog.rs  cve_binding.rs  deplatform.rs  downgrade.rs  error.rs  evidence.rs  ids.rs  install_fsm.rs  install_pipeline.rs  install_state.rs  lib.rs  lie_audit.rs  manifest.rs  manifest_pipeline.rs  mirror.rs  mirror_blacklist.rs  mirror_fetch.rs  mirror_policy.rs  package_kind.rs  repository.rs  rollout.rs  rotation.rs  service.rs  takedown.rs  trust.rs  trust_chain.rs  verifier.rs  version.rs
crates/aios-distribution/tests/: evidence.rs  install_pipeline.rs  integration_cross_crate.rs  lie_audit_cve.rs  m19_acceptance.rs  m19_closure.rs  manifest.rs  mirror.rs  rollout.rs  rotation_deplatform.rs  service.rs  skeleton.rs  trust_chain.rs
crates/aios-eval/: Cargo.toml  build.rs
crates/aios-eval/proto/: aios.eval.v1alpha1.proto
crates/aios-eval/src/: enums.rs  harness.rs  lib.rs  marketplace.rs  multi_agent.rs  report.rs  thresholds.rs
crates/aios-evidence/: Cargo.toml  build.rs
crates/aios-evidence/proto/: aios.evidence.v1alpha1.proto
crates/aios-evidence/src/: chain.rs  compaction.rs  error.rs  lib.rs  privacy.rs  receipt.rs  record.rs  redaction.rs  sealed.rs  segment.rs  segment_chain.rs
crates/aios-evidence/tests/: compaction_lifecycle.rs  grpc_roundtrip.rs  grpc_roundtrip_persistent.rs  lifecycle_chain.rs  persistence_crash_recovery.rs  privacy_ceiling.rs  redaction_roundtrip.rs  segment_lifecycle.rs
crates/aios-fleet/: Cargo.toml  build.rs
crates/aios-fleet/src/: cluster_root.rs  enums.rs  lib.rs  (+4 more)
crates/aios-fs/: Cargo.toml  build.rs
crates/aios-hardware/: Cargo.toml  build.rs
crates/aios-integration/: Cargo.toml  build.rs
crates/aios-mobile/: Cargo.toml  build.rs
crates/aios-network/: Cargo.toml  build.rs
crates/aios-policy/: Cargo.toml  build.rs
crates/aios-recovery/: Cargo.toml  build.rs
crates/aios-renderer-cli/: Cargo.toml
crates/aios-renderer-kde/: Cargo.toml  build.rs
crates/aios-renderer-web/: Cargo.toml  build.rs
crates/aios-sandbox/: Cargo.toml  build.rs
crates/aios-sgr/: Cargo.toml  build.rs
crates/aios-terminal/: Cargo.toml
crates/aios-time/: Cargo.toml  build.rs
crates/aios-vault/: Cargo.toml  build.rs
crates/aios-verification/: Cargo.toml  build.rs
distro/first-boot/: .gitignore  Cargo.toml  aios-first-boot.rs  aios-first-boot.sh
(+769 files in other folders)
