[workspace]
resolver = "2"
members = [
    "crates/aios-action",
    "crates/aios-capability-runtime",
    "crates/aios-fs",
    "crates/aios-vault",
    "crates/aios-renderer-cli",
    "crates/aios-sgr",
    "crates/aios-cognitive",
    "crates/aios-sandbox",
    "crates/aios-verification",
    "crates/aios-recovery",
    "crates/aios-evidence",
    "crates/aios-policy",
    "crates/aios-apps",
]

# Crates added later (per §22 MVP golden path order):
# - crates/aios-session     (S6.5 session container manager — Podman adapter)

[workspace.package]
edition = "2021"
rust-version = "1.94"
version = "0.0.1"
license = "Apache-2.0"
repository = "https://github.com/luckyngoriko/055.AI-OS.NET--LINUX-AI"
authors = ["AIOS Maintainers"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[workspace.dependencies]
# Pinned per §21 stack lock (Rev.1 §21):
# Rust + Tokio + tonic gRPC + serde + tracing
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
regex       = "1.12"
thiserror   = "2.0"
anyhow      = "1"
clap        = { version = "4", features = ["derive", "env"] }
ulid        = { version = "1.1", features = ["serde"] }
blake3      = "1.5"
tracing     = "0.1"
chrono      = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
# RFC 8785 JSON Canonicalization Scheme (Governor-approved T-006):
# canonical encoder with ECMA-262 §6.12.7 number normalization. Used by
# `crates/aios-action/src/canonical.rs` for request_hash + idempotency_hash.
serde_jcs   = "0.1"
# Canonical Rust enum-iteration / count derives (Governor-approved T-008):
# `EnumIter` for the 427-variant RecordType round-trip coverage test;
# `EnumCount` for the constant-time `LEN == 427` invariant. Both derives are
# generated by strum_macros at compile time and add no runtime cost. License
# MIT; transitive deps already in tree (proc-macro2, syn, quote).
strum        = "0.26"
strum_macros = "0.26"
# Ed25519 signing + verification (Governor-approved T-009). RustCrypto-adjacent
# `dalek-cryptography` project; license BSD-3-Clause (permissive, attribution
# only — compatible with workspace Apache-2.0). Used by `aios-evidence` to sign
# the canonical-minus-signature receipt bytes (S3.1 §5.2 / §11.3 / §28.5).
# `std` feature is default; `rand_core` exposes the keygen surface for test
# fixtures (production keys come from S5.2 Vault Broker, not from local RNG).
ed25519-dalek = { version = "2.1", features = ["std", "rand_core"] }
# Explicit `rand_core = "0.6"` matches the version re-exported by ed25519-dalek
# 2.1's `rand_core` feature; `getrandom` backend is the OS CSPRNG used by tests
# to mint ephemeral keypairs. Production never calls this path.
rand_core    = { version = "0.6", features = ["getrandom"] }
# T-049: vault real crypto primitives for S5.2 use-without-reveal operations.
aes-gcm      = "0.10"
hmac         = "0.12"
sha2         = "0.10"
hkdf         = "0.12"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
# T-011: gRPC stack per §21 lock — Rust + Tokio + tonic. tonic 0.12 is the
# current stable line; pairs with prost 0.13 (proto3 codegen) and tokio 1
# (async runtime). `tls` feature on tonic enables transport encryption for
# non-loopback bindings; the in-memory test backend uses plaintext over
# `127.0.0.1`. tonic-build is the proc-macro/codegen crate consumed by the
# evidence crate's `build.rs` — it requires `protoc` on PATH at build time.
tonic        = { version = "0.12", features = ["transport", "tls"] }
tonic-build  = "0.12"
# Vendored `protoc` binary used by `tonic-build` at build time. Without this,
# the build script fails on hosts that do not have `protoc` on PATH (the
# canonical AIOS dev box is one of them). The crate ships pre-built Linux /
# macOS / Windows binaries under the Apache-2.0 + BSD-3-Clause + MIT license
# combination of the original Google protobuf project; using it adds **zero**
# runtime cost (build-only) and removes a system dependency for every future
# AIOS gRPC crate.
protoc-bin-vendored = "3.0"
prost        = "0.13"
prost-types  = "0.13"
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait  = "0.1"
# T-012: RocksDB persistence backend (S3.1 §7.2 / §11.4). rocksdb 0.23 bundles
# `librocksdb-sys 0.17.3+10.4.2` whose vendored RocksDB 10.4.2 source compiles
# cleanly under GCC 15 (the 0.22 / RocksDB-8.10 combination was missing
# `<cstdint>` includes; Governor verified 0.23 builds in 2 m 08 s). Apache-2.0,
# compatible with workspace. We disable default features and re-enable only
# `snappy` + `lz4` compression — `zstd`, `zlib`, `bzip2`, and `bindgen-runtime`
# pull in additional system / build deps we do not need for the evidence log.
rocksdb     = { version = "0.23", default-features = false, features = ["snappy", "lz4"] }
# T-012 dev-dep: ephemeral filesystem fixtures for the persistence test harness.
# The crate creates a fresh tempdir per test, instantiates RocksDbEvidenceLog
# against it, and lets `Drop` clean up. MIT/Apache-2.0.
tempfile    = "3.10"
# T-022: standard base64 STANDARD alphabet for Ed25519 signature encoding in
# the policy bundle JSON envelope (S2.3 §12). Pinned 0.22 — the current 0.22.x
# line uses the `Engine` trait API; MIT/Apache-2.0; zero transitive deps.
base64      = "0.22"
# T-024: LRU decision cache (S2.3 §13.2 / §13.3). 0.12 is the current stable
# line; matches aios-evidence-style discipline of pinning to the latest
# verified-buildable minor. MIT-licensed; pure-Rust no_std-compatible.
lru         = "0.12"
# T-024: criterion microbench framework for the §18.1 perf-budget probe.
# Dev-dep only (consumed via [dev-dependencies] from aios-policy). 0.5 is the
# current stable line; "html_reports" feature is omitted because the CI
# integration that consumes the reports lands in T-025+.
criterion   = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.test]
opt-level = 0
debug = true
