[package]
name = "aios-cognitive"
description = "AIOS L5 Cognitive Core typed skeleton — intent, translator, latency, routing, circuit breaker, model bindings."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action = { path = "../aios-action" }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
strum       = { workspace = true }
strum_macros = { workspace = true }
thiserror   = { workspace = true }
ulid        = { workspace = true }
blake3      = { workspace = true }
tokio       = { workspace = true, features = ["macros", "rt", "sync"] }
async-trait = { workspace = true }

[lints]
workspace = true
