[package]
name = "aios-distribution"
description = "AIOS L10 Distribution layer — repository model, trust chain, signed package install pipeline, mirror semantics, publisher trust + deplatform, CVE-aware install, gRPC surfaces, and evidence emission for S11.1 (M19)."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

build = "build.rs"

[dependencies]
aios-action     = { path = "../aios-action" }
aios-evidence   = { path = "../aios-evidence" }
aios-policy     = { path = "../aios-policy" }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
chrono          = { workspace = true }
ulid            = { workspace = true }
tokio           = { workspace = true, features = ["sync", "macros"] }
async-trait     = { workspace = true }
ed25519-dalek   = { workspace = true }
blake3          = { workspace = true }
tonic           = { workspace = true }
prost           = { workspace = true }
prost-types     = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
rand_core   = { workspace = true }
ed25519-dalek = { workspace = true }
aios-integration = { path = "../aios-integration" }
chrono      = { workspace = true }

[lints]
workspace = true
