[package]
name = "aios-eval"
description = "AIOS S27 AI Evaluation and Model Governance — evaluation harness, model reports, multi-agent coordination, signed model bundles."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action   = { path = "../aios-action" }
aios-policy   = { path = "../aios-policy" }
aios-evidence = { path = "../aios-evidence" }
aios-cognitive = { path = "../aios-cognitive" }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
strum         = { workspace = true }
strum_macros  = { workspace = true }
thiserror     = { workspace = true }
ulid          = { workspace = true }
blake3        = { workspace = true }
tokio         = { workspace = true, features = ["macros", "rt"] }
async-trait   = { workspace = true }
tonic         = { workspace = true }
prost         = { workspace = true }
prost-types   = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
