[package]
name = "aios-evidence"
description = "AIOS S3.1 — Evidence Log foundation (rev.2 aios.evidence.v1alpha1). EvidenceReceipt envelope + append-only hash chain encoding INV-005 at the type level."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# First cross-crate consumer of `aios-action` — uses EvidenceReceiptId, ActionId,
# and the canonical BLAKE3 + JCS helpers (see `aios_action::canonical`).
aios-action = { path = "../aios-action" }

serde       = { workspace = true }
serde_json  = { workspace = true }
serde_jcs   = { workspace = true }
thiserror   = { workspace = true }
blake3      = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
# T-008: closed `RecordType` covers 427 variants; strum derives provide
# compile-time `EnumIter` + `EnumCount` so coverage tests run without
# hand-maintaining a parallel variant table.
strum        = { workspace = true }
strum_macros = { workspace = true }
# T-009: Ed25519 receipt signing path (S3.1 §5.2 / §11.3 / §28.5). Production
# signing keys are issued by S5.2 Vault Broker for the constitutional subject
# `_system:service:evidence-segment-signer`; the broker hands the evidence-log
# service a capability that performs the sign operation. The dependency here
# carries the verifier surface and the test-only ephemeral keygen path.
ed25519-dalek = { workspace = true }

[dev-dependencies]
# Tests mint ephemeral Ed25519 keypairs via the OS CSPRNG. Production never
# does — keys come from S5.2 (see receipt.rs module-level doc).
rand_core = { workspace = true }

[lints]
workspace = true
