[package]
name = "aios-fleet"
description = "AIOS S25 — Fleet, Cluster, and Remote Execution typed core skeleton."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action       = { path = "../aios-action" }
aios-policy       = { path = "../aios-policy" }
aios-evidence     = { path = "../aios-evidence" }
aios-network      = { path = "../aios-network" }
aios-distribution = { path = "../aios-distribution" }
aios-sandbox      = { path = "../aios-sandbox" }
serde             = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
strum             = { workspace = true }
strum_macros      = { workspace = true }
thiserror         = { workspace = true }
ulid              = { workspace = true }
blake3            = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
