[package]
name = "aios-fs"
description = "AIOS S1.3/S4.1 — AIOS-FS object model and namespace core types."
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
aios-action  = { path = "../aios-action" }
aios-evidence = { path = "../aios-evidence" }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
ulid         = { workspace = true }
blake3       = { workspace = true }
async-trait  = { workspace = true }
ed25519-dalek = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt"] }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
