[package]
name = "aios-hardware"
description = "AIOS L8 Hardware Graph + GPU Resource Model + Firmware Trust typed core skeleton — closed vocabularies, error taxonomy, and identifier types for S8.3 + S8.2 + S8.5."
edition.workspace = true
rust-version.workspace = true
version = "0.0.1"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aios-action     = { path = "../aios-action" }
aios-evidence   = { path = "../aios-evidence" }
aios-policy     = { path = "../aios-policy" }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
chrono          = { workspace = true }
ulid            = { workspace = true }
tokio           = { workspace = true, features = ["sync", "macros"] }
async-trait     = { workspace = true }
strum           = { workspace = true }
strum_macros    = { workspace = true }
tracing         = { workspace = true }
ed25519-dalek   = { workspace = true }
blake3          = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
rand_core  = { workspace = true }

[lints]
workspace = true
